2009-12-24  Dominik Honnef  <dominikho@gmx.net>

	* lib/weechat.rb (Weechat): bumped version to 0.0.4

	* lib/weechat/properties.rb (Weechat::Properties::InstanceMethods#get_infolist)
	(Weechat::Properties::InstanceMethods#get_infolist_property)
	(Weechat::Properties::InstanceMethods#valid_property): more specific infolist querying; performance tweaks
	* lib/weechat/infolist.rb (Weechat::Infolist.parse): more specific infolist querying; performance tweaks
	* lib/weechat/channel.rb (Weechat::IRC::Channel#get_infolist): more specific infolist querying; performance tweaks

	* lib/weechat.rb (Weechat): bumped version to 0.0.3

	* lib/weechat/buffer.rb (Weechat::Buffer.find): added method for finding buffers

	* lib/weechat/channel.rb (Weechat::IRC::Channel.channels)
	(Weechat::IRC::Channel.find): added methods for finding channels

	* lib/weechat/user.rb (Weechat::IRC::User#==): made user comparable

	* lib/weechat/hooks.rb: added signal hooks
	* lib/weechat/hooks/signal.rb (Weechat::Hooks::Signal): added signal hooks
	* lib/weechat.rb (Weechat::Helper#signal_callback): added signal hooks

2009-12-23  Dominik Honnef  <dominikho@gmx.net>


	* lib/weechat/hook.rb (Weechat::Hook)
	(Weechat::Hook::compute_free_id): rewrote uid generation

	* lib/weechat.rb (Weechat::Helper#modifier_callback): added support for specific modifiers
	* lib/weechat/modifier.rb (Weechat::Modifier::inherited): added support for specific modifiers
	* lib/weechat/modifier.rb (Weechat::Modifiers::Print): added Print modifier


	* lib/weechat/channel.rb (Weechat::IRC::Channel#get_infolist): fixed parsing

2009-12-21  Dominik Honnef  <dominikho@gmx.net>

	* lib/weechat/line.rb (Weechat::Line#parse): fix line parsing

	* lib/weechat/info.rb: fixed comments
	* lib/weechat/command.rb: fixed comments
	* lib/weechat/modifier.rb: fixed comments

	* lib/weechat/script.rb (Weechat::Script::Skeleton::InstanceMethods#weechat_init):
	fixed version comparison

	* Rakefile: bumped version to 0.0.2